--- a/README.adoc
+++ b/README.adoc
@@ -18,7 +18,8 @@ Columns can be created via simple factory methods, through a fluent builder API,
 
 The `paleo-core` module provides all classes to identify, create, and structure typed columns: 
 
-```java
+[source,java]
+----
 // Type-safe column identifiers
 final StringColumnId NAME = ColumnIds.stringCol("Name");
 final CategoryColumnId COLOR = ColumnIds.categoryCol("Color");
@@ -42,7 +43,7 @@ double maxServingSize = servingSizes.summaryStatistics().getMax();
 
 // Smart column implementations
 Set<String> colors = colorColumn.getCategories();
-```
+----
 
 # Parsing From Text / File
 
@@ -54,17 +55,18 @@ data frame (i.e. the names and types of its columns) can be defined in one of tw
 In its simplest format, the tab-delimited text representation directly contains column names and types in a header.
 The first row specifies the column names, the second row specifies the column types (actual data starting on third row):
 
-```
+----
 1 Name    Color
 2 String  Category
 3 Banana  Yellow
 ...
 n Apple   Green
-```
+----
 
 The contents can then be parsed via `Parser.parseTabDelimited(Reader in)`, e.g. like:
 
-```java
+[source,java]
+----
 final String EXAMPLE =
             "Name\tColor\tServing Size (g)\n" +
             "String\tCategory\tDouble\n" +
@@ -74,7 +76,7 @@ final String EXAMPLE =
             "Apple\tGreen\t182";
 
 DataFrame dataFrame = Parser.parseTabDelimited(new StringReader(EXAMPLE));
-```
+----
 
 ## External JSON Schema
 
@@ -82,7 +84,8 @@ Generally it is advisable to separate the structural information from the actual
 definition of an external JSON schema. The format is inspired by the
 http://dataprotocols.org/json-table-schema[JSON Table Schema]:
 
-```json
+[source,json]
+----
 {
   "title": "Example Schema",
   "dataFileName": "data.txt",
@@ -107,21 +110,23 @@ http://dataprotocols.org/json-table-schema[JSON Table Schema]:
     }
   ]
 }
-```
+----
 
 Dedicated parsing methods allow to first parse the schema from JSON, and subsequently use it to create a `DataFrame`.
 A given base directory is used to load the actual data (i.e. to resolve the location of the configured `dataFileName`):
 
-```java
+[source,java]
+----
 Schema schema = Schema.parseJson(new StringReader(EXAMPLE_SCHEMA));
 DataFrame dataFrame = Parser.parseTabDelimited(schema, baseDir);
-```
+----
 
 ## Working With Parsed Data Frames
 
 Once a `DataFrame` instance has been parsed, its data can be accessed through a type-safe API:
 
-```java
+[source,java]
+----
 final String EXAMPLE =
             "Name\tColor\tServing Size (g)\n" +
             "String\tCategory\tDouble\n" +
@@ -143,7 +148,7 @@ IndexedSeq<String> nameValues = nameColumn.getValues();
 
 // ... or access individual values via row index / column id 
 String yellow = dataFrame.getValueAt(2, COLOR);
-```
+----
 
 # Usage
 
@@ -153,15 +158,17 @@ All modules are available via https://bintray.com/netzwerg/maven/paleo/view[Bint
 
 Gradle:
 
-```groovy
+[source,groovy]
+----
 repositories {
     jcenter()
 }
-```
+----
 
 Maven `settings.xml`:
 
-```xml
+[source,xml]
+----
 <repository>
     <snapshots>
       <enabled>false</enabled>
@@ -170,26 +177,28 @@ Maven `settings.xml`:
     <name>bintray</name>
     <url>http://jcenter.bintray.com</url>
 </repository>
-```
+----
 
 ## Using the `paleo-core` module
 
 Gradle:
 
-```groovy
+[source,groovy]
+----
 compile 'ch.netzwerg:paleo-core:0.4.1'
-```
+----
 
 Maven:
 
-```xml
+[source,xml]
+----
 <dependency>
     <groupId>ch.netzwerg</groupId>
     <artifactId>paleo-core</artifactId>
     <version>0.4.1</version>
     <type>jar</type>
 </dependency>
-```
+----
 
 ## Using the `paleo-io` module
 
@@ -197,24 +206,26 @@ Optional (requires `paleo-core`)
 
 Gradle:
 
-```groovy
+[source,groovy]
+----
 compile 'ch.netzwerg:paleo-io:0.4.1'
-```
+----
 
 Maven:
 
-```xml
+[source,xml]
+----
 <dependency>
     <groupId>ch.netzwerg</groupId>
     <artifactId>paleo-io</artifactId>
     <version>0.4.1</version>
     <type>jar</type>
 </dependency>
-```
+----
 
 # Javaslang
 
-Paleo makes extensive use of the https://github.com/javaslang/javaslang [Javaslang library]. Javaslang provides
+Paleo makes extensive use of the https://github.com/javaslang/javaslang[Javaslang library]. Javaslang provides
 awesome collection classes which offer functionality way beyond the standard JDK. Working with the Javaslang classes
 is highly recommended, but it is always possible to back out and convert to JDK standards (e.g. with `toJavaList()`).
 
