#12: Introduce `of(name)` factory methods for `ColumnIds`

--- a/README.adoc
+++ b/README.adoc
@@ -22,9 +22,9 @@ The `paleo-core` module provides all classes to identify, create, and structure 
 [source,java]
 ----
 // Type-safe column identifiers
-final StringColumnId NAME = ColumnIds.stringCol("Name");
-final CategoryColumnId COLOR = ColumnIds.categoryCol("Color");
-final DoubleColumnId SERVING_SIZE = ColumnIds.doubleCol("Serving Size (g)");
+final StringColumnId NAME = StringColumnId.of("Name");
+final CategoryColumnId COLOR = CategoryColumnId.of("Color");
+final DoubleColumnId SERVING_SIZE = DoubleColumnId.of("Serving Size (g)");
 
 // Convenient column creation
 StringColumn nameColumn = StringColumn.ofAll(NAME, "Banana", "Blueberry", "Lemon", "Apple");
