#13: Differentiate between `getValues()` and `valueStream()`

--- a/README.adoc
+++ b/README.adoc
@@ -39,7 +39,7 @@ String lemon = dataFrame.getValueAt(2, NAME);
 double appleServingSize = dataFrame.getValueAt(3, SERVING_SIZE);
 
 // Typed stream-based access to all values
-DoubleStream servingSizes = servingSizeColumn.getValues();
+DoubleStream servingSizes = servingSizeColumn.valueStream();
 double maxServingSize = servingSizes.summaryStatistics().getMax();
 
 // Smart column implementations
